basic filter/listeners integration for servlet layer